src/test/resources/typeSystemTestModels/valid/methods/MethodNoAccessPairModifier.java
package typeSystemTestModels.valid.methods;

public class MethodNoAccessPairModifier {
  public static void setName(){

  }

  private void setName1(){

  }

  protected void setName2(){

  }

}
